--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
+    "styled-components-modifiers": "^1.2.5",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
