--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,8 @@
 [build]
   command = "npm run build-storybook"
   functions = "functions"
-  publish = "/public"
-  
+  publish = "/storybook-static/"
+
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
